@@ -1,5 +1,11 @@
 2023-02-07  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-asm.c (pkl_asm_insn_binop): Check for signed
+	overflow whenever appropriate.
+	(pkl_asm_insn): Handle signed overflow macro-instructions.
+
+2023-02-07  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-insn.def (PKL_INSN_NEGOF): New macro-instruction.
 	(PKL_INSN_ADDOF): Likewise.
 	(PKL_INSN_SUBOF): Likewise.
